# rs-ff4

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: credits.md  decoding-failures.md  references.md  roadmap.md  tm2-to-png-failures.md
game/: Cargo.toml
game/assets/: armor.json  items.json
game/assets/definitions/: party.json
game/assets/tilemap/: castle1_b_anm.tm2  castle1_b_base.tm2  castle1_b_var.tm2  castle1_baron_castle_01.cn2  castle1_baron_castle_02.cn2
game/resources/: armor.json  enemies.json  items.json  key-items.json  magic.json  weapons.json
game/src/: audio.rs  common.rs  defs.rs  error.rs  main.rs  shader.rs  tilemap.rs  tileset.rs
game/src/graphics/: camera.rs  core.rs  mesh.rs  mod.rs  pipeline.rs  texture.rs  vertex.rs
game/src/graphics/pipelines/: debug.rs  mod.rs  textured.rs
game/src/graphics/shaders/: debug.wgsl  textured.wgsl
lzs-extractor/: Cargo.toml
lzs-extractor/assets/: CN_ancient_waterway.lzs
lzs-extractor/src/: main.rs
scraper_bestiary/: Cargo.toml
scraper_bestiary/assets/: bestiary.txt  enemies.default.json
scraper_bestiary/resources/: bestiary.txt  enemies.json
scraper_bestiary/src/: main.rs
tim2/cli/: Cargo.toml
tim2/cli/src/: main.rs
tim2/lib/: Cargo.toml
tim2/lib/src/: common.rs  error.rs  frame.rs  image.rs  lib.rs  pixel.rs
tm2/: .gitignore  Cargo.toml
tm2/assets/: cave1_c_base.tm2
tm2/src/: main.rs  shader.rs  sprite.rs  texture.rs  tm2.rs  vbo.rs
unpacker/: Cargo.toml
unpacker/assets/: 00ta_mon.lzs  CN_mist_cave.lzs  image_panel000-encoded.tm2  menu_gallery_pic.lzs  ms_000.tm2
unpacker/src/: checks.rs  common.rs  decode.rs  error.rs  extract.rs  extractor.rs  iso.rs  lzs.rs  lzss.rs  main.rs  metadata.rs  pac_directory.rs  png.rs  tilesets.rs  unpacker.rs
