[package]
name = "game"
version = "0.1.0"
authors = ["travistrue2008 <travis.true08@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.4"
cgmath = "0.16.1"
gl = "0.10.0"
glfw = "0.37.0"
image = "0.23.2"
lazy_static = "1.4.0"
rodio = "0.11.0"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0"
tim2 = "0.3.0"
vex = "2.1.1"

gl_toolkit = { git = "https://github.com/travistrue2008/gl-toolkit-rs" }
