[package]
name = "game"
version = "0.1.0"
authors = ["travistrue2008 <travis.true08@gmail.com>"]
edition = "2021"

[dependencies]
async-trait = "0.1.68"
bytemuck = { version = "1.12", features = [ "derive" ] }
byteorder = "1.3.4"
cgmath = "0.18.0"
env_logger = "0.10"
image = "0.23.2"
lazy_static = "1.4.0"
log = "0.4"
rodio = "0.11.0"
tim2 = "0.3.0"
tokio = { version = "1.28.2", features = ["full"] }
winit = "0.27"
wgpu = "0.15"
