[package]
name = "scraper_bestiary"
version = "0.1.0"
authors = ["travistrue2008 <travis.true08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
scan_fmt = "0.2.5"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
