[package]
name = "tim2"
version = "0.1.0"
authors = ["travistrue2008 <travis.true08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
cgmath = "0.16.1"
gl = "0.10.0"
glfw = "0.37.0"
image = "0.23.2"
